--- a/InvenTree/locale/hu/LC_MESSAGES/django.po
+++ b/InvenTree/locale/hu/LC_MESSAGES/django.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-22 13:00+0000\n"
-"PO-Revision-Date: 2023-05-19 13:24\n"
+"POT-Creation-Date: 2023-05-22 02:13+0000\n"
+"PO-Revision-Date: 2023-05-22 13:26\n"
 "Last-Translator: \n"
 "Language-Team: Hungarian\n"
 "Language: hu_HU\n"
@@ -1361,8 +1361,7 @@ msgstr "Hiányos foglalás elfogadása"
 
 #: build/serializers.py:502
 msgid "Complete outputs if stock has not been fully allocated"
-msgstr ""
-"Kimenetek befejezése akkor is ha a készlet nem\n"
+msgstr "Kimenetek befejezése akkor is ha a készlet nem\n"
 "lett teljesen lefoglalva"
 
 #: build/serializers.py:571
@@ -12408,8 +12407,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr "A %(provider_name)s felhasználói fiókodat fogod használni a %(site_name)s belépéshez.<br>Kérlek töltsd ki az alábbi adatokat:"
 
@@ -12588,3 +12586,4 @@ msgstr "Jogosultság tételek szerkesztéséhez"
 #: users/models.py:247
 msgid "Permission to delete items"
 msgstr "Jogosultság tételek törléséhez"
+
