--- a/InvenTree/locale/ja/LC_MESSAGES/django.po
+++ b/InvenTree/locale/ja/LC_MESSAGES/django.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-26 09:46+0000\n"
-"PO-Revision-Date: 2023-05-24 16:11\n"
+"POT-Creation-Date: 2023-05-26 07:03+0000\n"
+"PO-Revision-Date: 2023-05-26 22:36\n"
 "Last-Translator: \n"
 "Language-Team: Japanese\n"
 "Language: ja_JP\n"
@@ -23,27 +23,27 @@ msgstr "APIエンドポイントが見つかりません"
 
 #: InvenTree/api.py:299
 msgid "User does not have permission to view this model"
-msgstr ""
+msgstr "ユーザーにこのモデルを表示する権限がありません"
 
 #: InvenTree/conversion.py:62
 msgid "No value provided"
-msgstr ""
+msgstr "値がありません"
 
 #: InvenTree/conversion.py:84
 msgid "Provided value is not a valid number"
-msgstr ""
+msgstr "指定された値は有効な数値ではありません。"
 
 #: InvenTree/conversion.py:86
 msgid "Provided value has an invalid unit"
-msgstr ""
+msgstr "指定された値に無効な単位があります"
 
 #: InvenTree/conversion.py:88
 msgid "Provided value could not be converted to the specified unit"
-msgstr ""
+msgstr "指定された値は指定された単位に変換できませんでした"
 
 #: InvenTree/exceptions.py:90
 msgid "Error details can be found in the admin panel"
-msgstr ""
+msgstr "エラーの詳細は管理者パネルで確認できます"
 
 #: InvenTree/fields.py:127
 msgid "Enter date"
@@ -75,11 +75,11 @@ msgstr "メモ"
 #: InvenTree/format.py:152
 #, python-brace-format
 msgid "Value '{name}' does not appear in pattern format"
-msgstr ""
+msgstr "値 '{name}' はパターン形式で表示されません"
 
 #: InvenTree/format.py:162
 msgid "Provided value does not match required pattern: "
-msgstr ""
+msgstr "指定された値が必要なパターンと一致しません: "
 
 #: InvenTree/forms.py:145
 msgid "Enter password"
@@ -99,7 +99,7 @@ msgstr "新しいパスワードの確認"
 
 #: InvenTree/forms.py:160
 msgid "Old password"
-msgstr ""
+msgstr "古いパスワード"
 
 #: InvenTree/forms.py:179
 msgid "Email (again)"
@@ -115,11 +115,11 @@ msgstr "毎回同じメールアドレスを入力する必要があります。
 
 #: InvenTree/forms.py:230 InvenTree/forms.py:236
 msgid "The provided primary email address is not valid."
-msgstr ""
+msgstr "指定されたプライマリEメールアドレスは無効です。"
 
 #: InvenTree/forms.py:242
 msgid "The provided email domain is not approved."
-msgstr ""
+msgstr "指定されたメールドメインは承認されていません。"
 
 #: InvenTree/helpers.py:191
 msgid "Connection error"
@@ -127,31 +127,31 @@ msgstr "接続エラー"
 
 #: InvenTree/helpers.py:195 InvenTree/helpers.py:200
 msgid "Server responded with invalid status code"
-msgstr ""
+msgstr "サーバは無効なステータスコードで応答しました"
 
 #: InvenTree/helpers.py:197
 msgid "Exception occurred"
-msgstr ""
+msgstr "例外が発生しました"
 
 #: InvenTree/helpers.py:205
 msgid "Server responded with invalid Content-Length value"
-msgstr ""
+msgstr "サーバーが無効なContent-Length値で応答しました"
 
 #: InvenTree/helpers.py:208
 msgid "Image size is too large"
-msgstr ""
+msgstr "画像サイズが大きすぎます"
 
 #: InvenTree/helpers.py:220
 msgid "Image download exceeded maximum size"
-msgstr ""
+msgstr "画像のダウンロードが最大サイズを超えました"
 
 #: InvenTree/helpers.py:225
 msgid "Remote server returned empty response"
-msgstr ""
+msgstr "リモートサーバーが空のレスポンスを返しました"
 
 #: InvenTree/helpers.py:233
 msgid "Supplied URL is not a valid image file"
-msgstr ""
+msgstr "指定されたURLは有効な画像ファイルではありません"
 
 #: InvenTree/helpers.py:625 order/models.py:438 order/models.py:599
 msgid "Invalid quantity provided"
@@ -168,17 +168,17 @@ msgstr ""
 #: InvenTree/helpers.py:696 InvenTree/helpers.py:731
 #, python-brace-format
 msgid "Invalid group range: {g}"
-msgstr ""
+msgstr "グループ範囲が無効です: {g}"
 
 #: InvenTree/helpers.py:725
 #, python-brace-format
 msgid "Group range {g} exceeds allowed quantity ({q})"
-msgstr ""
+msgstr "グループ範囲 {g} が許可された数量を超えています ({q})"
 
 #: InvenTree/helpers.py:749 InvenTree/helpers.py:756 InvenTree/helpers.py:771
 #, python-brace-format
 msgid "Invalid group sequence: {g}"
-msgstr ""
+msgstr "無効なグループシーケンスです: {g}"
 
 #: InvenTree/helpers.py:781
 msgid "No serial numbers found"
@@ -390,15 +390,15 @@ msgstr ""
 
 #: InvenTree/models.py:765
 msgid "Markdown notes (optional)"
-msgstr ""
+msgstr "マークダウンメモ (オプション)"
 
 #: InvenTree/models.py:792
 msgid "Barcode Data"
-msgstr ""
+msgstr "バーコード情報"
 
 #: InvenTree/models.py:793
 msgid "Third party barcode data"
-msgstr ""
+msgstr "サードパーティ製バーコードデータ"
 
 #: InvenTree/models.py:798
 msgid "Barcode Hash"
@@ -568,11 +568,11 @@ msgstr "ポーランド語"
 
 #: InvenTree/settings.py:730
 msgid "Portuguese"
-msgstr ""
+msgstr "ポルトガル語"
 
 #: InvenTree/settings.py:731
 msgid "Portuguese (Brazilian)"
-msgstr ""
+msgstr "ポルトガル語 (ブラジル)"
 
 #: InvenTree/settings.py:732
 msgid "Russian"
@@ -580,7 +580,7 @@ msgstr "ロシア語"
 
 #: InvenTree/settings.py:733
 msgid "Slovenian"
-msgstr ""
+msgstr "スロベニア語"
 
 #: InvenTree/settings.py:734
 msgid "Swedish"
@@ -646,7 +646,7 @@ msgstr "返品済"
 
 #: InvenTree/status_codes.py:182 InvenTree/status_codes.py:398
 msgid "In Progress"
-msgstr ""
+msgstr "処理中"
 
 #: InvenTree/status_codes.py:183 order/models.py:1331
 #: templates/js/translated/sales_order.js:1476
@@ -657,7 +657,7 @@ msgstr "発送済み"
 
 #: InvenTree/status_codes.py:223
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: InvenTree/status_codes.py:224
 msgid "Attention needed"
@@ -1155,7 +1155,7 @@ msgstr ""
 #: templates/InvenTree/search.html:139 templates/js/translated/build.js:2809
 #: templates/navbar.html:38
 msgid "Build"
-msgstr ""
+msgstr "組立"
 
 #: build/models.py:1438
 msgid "Build to allocate parts"
@@ -3567,7 +3567,7 @@ msgstr ""
 #: templates/js/translated/company.js:1206
 #: templates/js/translated/table_filters.js:694
 msgid "Manufacturer"
-msgstr ""
+msgstr "製造元"
 
 #: company/models.py:294
 msgid "Select manufacturer"
@@ -3655,7 +3655,7 @@ msgstr ""
 #: templates/js/translated/purchase_order.js:1614
 #: templates/js/translated/table_filters.js:698
 msgid "Supplier"
-msgstr ""
+msgstr "仕入先"
 
 #: company/models.py:565
 msgid "Select supplier"
@@ -4043,7 +4043,7 @@ msgstr ""
 #: part/admin.py:60 part/templates/part/part_sidebar.html:33
 #: templates/InvenTree/search.html:190 templates/navbar.html:48
 msgid "Suppliers"
-msgstr ""
+msgstr "仕入先"
 
 #: company/templates/company/manufacturer_part.html:136
 #: part/templates/part/detail.html:392
@@ -6888,7 +6888,7 @@ msgstr ""
 #: templates/js/translated/part.js:2063 templates/js/translated/stock.js:986
 #: templates/js/translated/stock.js:1793 templates/navbar.html:31
 msgid "Stock"
-msgstr ""
+msgstr "在庫"
 
 #: part/templates/part/part_sidebar.html:30
 #: templates/InvenTree/settings/sidebar.html:37
@@ -12425,8 +12425,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12564,44 +12563,45 @@ msgstr ""
 
 #: users/admin.py:222
 msgid "Personal info"
-msgstr ""
+msgstr "個人情報"
 
 #: users/admin.py:223
 msgid "Permissions"
-msgstr ""
+msgstr "許可"
 
 #: users/admin.py:226
 msgid "Important dates"
-msgstr ""
+msgstr "重要な日付"
 
 #: users/models.py:230
 msgid "Permission set"
-msgstr ""
+msgstr "パーミッション設定"
 
 #: users/models.py:238
 msgid "Group"
-msgstr ""
+msgstr "グループ"
 
 #: users/models.py:241
 msgid "View"
-msgstr ""
+msgstr "表示"
 
 #: users/models.py:241
 msgid "Permission to view items"
-msgstr ""
+msgstr "項目を表示する権限"
 
 #: users/models.py:243
 msgid "Permission to add items"
-msgstr ""
+msgstr "項目を追加する権限"
 
 #: users/models.py:245
 msgid "Change"
-msgstr ""
+msgstr "変更"
 
 #: users/models.py:245
 msgid "Permissions to edit items"
-msgstr ""
+msgstr "項目を編集する権限"
 
 #: users/models.py:247
 msgid "Permission to delete items"
-msgstr ""
+msgstr "項目を削除する権限"
+
