--- a/InvenTree/locale/cs/LC_MESSAGES/django.po
+++ b/InvenTree/locale/cs/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-31 21:21+0000\n"
-"PO-Revision-Date: 2023-05-27 22:51\n"
+"PO-Revision-Date: 2023-05-31 23:41\n"
 "Last-Translator: \n"
 "Language-Team: Czech\n"
 "Language: cs_CZ\n"
@@ -27,19 +27,19 @@ msgstr "Uživatel nemá právo zobrazit tento model"
 
 #: InvenTree/conversion.py:62
 msgid "No value provided"
-msgstr ""
+msgstr "Není k dispozici žádná hodnota"
 
 #: InvenTree/conversion.py:84
 msgid "Provided value is not a valid number"
-msgstr ""
+msgstr "Zadaná hodnota není platné číslo"
 
 #: InvenTree/conversion.py:86
 msgid "Provided value has an invalid unit"
-msgstr ""
+msgstr "Zadaná hodnota má neplatnou jednotku"
 
 #: InvenTree/conversion.py:88
 msgid "Provided value could not be converted to the specified unit"
-msgstr ""
+msgstr "Zadaná hodnota nemohla být převedena na danou jednotku"
 
 #: InvenTree/exceptions.py:90
 msgid "Error details can be found in the admin panel"
@@ -195,7 +195,7 @@ msgstr "Zadaná URL adresa není platný soubor obrázku"
 
 #: InvenTree/models.py:82
 msgid "Metadata must be a python dict object"
-msgstr ""
+msgstr "Metadata musí být objekt python dict"
 
 #: InvenTree/models.py:86
 msgid "Plugin Metadata"
@@ -531,10 +531,8 @@ msgid "Farsi / Persian"
 msgstr "Farsi / Perština"
 
 #: InvenTree/settings.py:721
-#, fuzzy
-#| msgid "Danish"
 msgid "Finnish"
-msgstr "Dánština"
+msgstr "Finština"
 
 #: InvenTree/settings.py:722
 msgid "French"
@@ -719,7 +717,7 @@ msgstr "Umístění změněno"
 
 #: InvenTree/status_codes.py:320
 msgid "Stock updated"
-msgstr ""
+msgstr "Stav zásob byl aktualizován"
 
 #: InvenTree/status_codes.py:322
 msgid "Installed into assembly"
@@ -771,7 +769,7 @@ msgstr "Výstup objednávky sestavení dokončen"
 
 #: InvenTree/status_codes.py:340
 msgid "Build order output rejected"
-msgstr ""
+msgstr "Výstup objednávky sestavení byl odmítnut"
 
 #: InvenTree/status_codes.py:341 templates/js/translated/stock.js:1676
 msgid "Consumed by build order"
@@ -815,7 +813,7 @@ msgstr "Odmítnout"
 
 #: InvenTree/validators.py:32 InvenTree/validators.py:34
 msgid "Invalid physical unit"
-msgstr ""
+msgstr "Neplatná fyzikální jednotka"
 
 #: InvenTree/validators.py:40
 msgid "Not a valid currency code"
@@ -916,7 +914,7 @@ msgstr "Nadřazená sestava"
 
 #: build/models.py:176
 msgid "BuildOrder to which this build is allocated"
-msgstr ""
+msgstr "Příkaz sestavení pro který je toto sestavení přiděleno"
 
 #: build/models.py:181 build/templates/build/build_base.html:98
 #: build/templates/build/detail.html:29 company/models.py:775
@@ -1004,23 +1002,23 @@ msgstr "Množství sestav"
 
 #: build/models.py:223
 msgid "Number of stock items to build"
-msgstr ""
+msgstr "Počet skladových položek k sestavení"
 
 #: build/models.py:227
 msgid "Completed items"
-msgstr ""
+msgstr "Dokončené položky"
 
 #: build/models.py:229
 msgid "Number of stock items which have been completed"
-msgstr ""
+msgstr "Počet skladových položek, které byly dokončeny"
 
 #: build/models.py:233
 msgid "Build Status"
-msgstr ""
+msgstr "Stav sestavení"
 
 #: build/models.py:237
 msgid "Build status code"
-msgstr ""
+msgstr "Stavový kód sestavení"
 
 #: build/models.py:246 build/serializers.py:269 order/serializers.py:505
 #: stock/models.py:739 templates/js/translated/purchase_order.js:1099
@@ -1036,32 +1034,32 @@ msgstr ""
 #: templates/js/translated/return_order.js:327
 #: templates/js/translated/sales_order.js:815
 msgid "Creation Date"
-msgstr ""
+msgstr "Datum vytvoření"
 
 #: build/models.py:257
 msgid "Target completion date"
-msgstr ""
+msgstr "Cílové datum dokončení"
 
 #: build/models.py:258
 msgid "Target date for build completion. Build will be overdue after this date."
-msgstr ""
+msgstr "Cílové datum dokončení sestavení. Sestavení bude po tomto datu v prodlení."
 
 #: build/models.py:261 order/models.py:406 order/models.py:1764
 #: templates/js/translated/build.js:2953
 msgid "Completion Date"
-msgstr ""
+msgstr "Datum dokončení"
 
 #: build/models.py:267
 msgid "completed by"
-msgstr ""
+msgstr "dokončil"
 
 #: build/models.py:275 templates/js/translated/build.js:2913
 msgid "Issued by"
-msgstr ""
+msgstr "Vystavil"
 
 #: build/models.py:276
 msgid "User who issued this build order"
-msgstr ""
+msgstr "Uživatel, který vydal tento příkaz k sestavení"
 
 #: build/models.py:284 build/templates/build/build_base.html:204
 #: build/templates/build/detail.html:122 order/models.py:255
@@ -1075,11 +1073,11 @@ msgstr ""
 #: templates/js/translated/return_order.js:347
 #: templates/js/translated/table_filters.js:450
 msgid "Responsible"
-msgstr ""
+msgstr "Odpovědný"
 
 #: build/models.py:285
 msgid "User or group responsible for this build order"
-msgstr ""
+msgstr "Uživatel nebo skupina odpovědná za tento příkaz k sestavení"
 
 #: build/models.py:290 build/templates/build/detail.html:108
 #: company/templates/company/manufacturer_part.html:107
@@ -1094,74 +1092,74 @@ msgstr "Externí odkaz"
 
 #: build/models.py:295
 msgid "Build Priority"
-msgstr ""
+msgstr "Priorita sestavení"
 
 #: build/models.py:298
 msgid "Priority of this build order"
-msgstr ""
+msgstr "Priorita tohoto příkazu k sestavení"
 
 #: build/models.py:536
 #, python-brace-format
 msgid "Build order {build} has been completed"
-msgstr ""
+msgstr "Příkaz k sestavení {build} byl dokončen"
 
 #: build/models.py:542
 msgid "A build order has been completed"
-msgstr ""
+msgstr "Příkaz k sestavení byl dokončen"
 
 #: build/models.py:744 build/models.py:811
 msgid "No build output specified"
-msgstr ""
+msgstr "Nebyl specifikováno žádný výstup sestavení"
 
 #: build/models.py:747
 msgid "Build output is already completed"
-msgstr ""
+msgstr "Výstup sestavení je již dokončen"
 
 #: build/models.py:750
 msgid "Build output does not match Build Order"
-msgstr ""
+msgstr "Výstup sestavení neodpovídá příkazu sestavení"
 
 #: build/models.py:815 build/serializers.py:212 build/serializers.py:251
 #: build/serializers.py:811 order/models.py:437 order/serializers.py:378
 #: order/serializers.py:500 part/serializers.py:1087 part/serializers.py:1408
 #: stock/models.py:593 stock/models.py:1386 stock/serializers.py:315
 msgid "Quantity must be greater than zero"
-msgstr ""
+msgstr "Množství musí být vyšší než nula"
 
 #: build/models.py:820 build/serializers.py:217
 msgid "Quantity cannot be greater than the output quantity"
-msgstr ""
+msgstr "Množství nemůže být větší než výstupní množství"
 
 #: build/models.py:1272
 msgid "Build item must specify a build output, as master part is marked as trackable"
-msgstr ""
+msgstr "Položka sestavení musí specifikovat výstup sestavení, protože hlavní díl je označen jako sledovatelný"
 
 #: build/models.py:1281
 #, python-brace-format
 msgid "Allocated quantity ({q}) must not exceed available stock quantity ({a})"
-msgstr ""
+msgstr "Zabrané množství ({q}) nesmí překročit dostupné skladové množství ({a})"
 
 #: build/models.py:1291 order/models.py:1598
 msgid "Stock item is over-allocated"
-msgstr ""
+msgstr "Skladová položka je nadměrně zabrána"
 
 #: build/models.py:1297 order/models.py:1601
 msgid "Allocation quantity must be greater than zero"
-msgstr ""
+msgstr "Zabrané množství musí být větší než nula"
 
 #: build/models.py:1303
 msgid "Quantity must be 1 for serialized stock"
-msgstr ""
+msgstr "Množství musí být 1 pro zřetězený sklad"
 
 #: build/models.py:1360
 msgid "Selected stock item not found in BOM"
-msgstr ""
+msgstr "Vybraná skladová položka nebyla v BOM nalezena"
 
 #: build/models.py:1438 stock/templates/stock/item_base.html:170
 #: templates/InvenTree/search.html:139 templates/js/translated/build.js:2841
 #: templates/navbar.html:38
 msgid "Build"
-msgstr ""
+msgstr "Sestavení"
 
 #: build/models.py:1439
 msgid "Build to allocate parts"
@@ -5980,10 +5978,8 @@ msgid "Valid choices for this parameter (comma-separated)"
 msgstr ""
 
 #: part/models.py:3505
-#, fuzzy
-#| msgid "Invalid choice for parent build"
 msgid "Invalid choice for parameter value"
-msgstr "Neplatná volba nadřazeného sestavení"
+msgstr ""
 
 #: part/models.py:3531
 msgid "Parent Part"
@@ -12490,8 +12486,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12670,3 +12665,4 @@ msgstr "Oprávnění k úpravě položek"
 #: users/models.py:247
 msgid "Permission to delete items"
 msgstr "Oprávnění k odstranění položek"
+
