--- a/InvenTree/locale/fi/LC_MESSAGES/django.po
+++ b/InvenTree/locale/fi/LC_MESSAGES/django.po
@@ -1,54 +1,53 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-31 21:21+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2023-05-31 23:42\n"
+"Last-Translator: \n"
+"Language-Team: Finnish\n"
+"Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Crowdin-Project: inventree\n"
+"X-Crowdin-Project-ID: 452300\n"
+"X-Crowdin-Language: fi\n"
+"X-Crowdin-File: /[inventree.InvenTree] l10/InvenTree/locale/en/LC_MESSAGES/django.po\n"
+"X-Crowdin-File-ID: 154\n"
 
 #: InvenTree/api.py:65
 msgid "API endpoint not found"
-msgstr ""
+msgstr "API-rajapinta ei löydy"
 
 #: InvenTree/api.py:299
 msgid "User does not have permission to view this model"
-msgstr ""
+msgstr "Käyttäjän käyttöoikeustaso ei riitä kohteen tarkastelemiseen"
 
 #: InvenTree/conversion.py:62
 msgid "No value provided"
-msgstr ""
+msgstr "Arvoa ei annettu"
 
 #: InvenTree/conversion.py:84
 msgid "Provided value is not a valid number"
-msgstr ""
+msgstr "Annettu arvo ei ole kelvollinen numero"
 
 #: InvenTree/conversion.py:86
 msgid "Provided value has an invalid unit"
-msgstr ""
+msgstr "Annetulla arvolla on virheellinen yksikkö"
 
 #: InvenTree/conversion.py:88
 msgid "Provided value could not be converted to the specified unit"
-msgstr ""
+msgstr "Annettua arvoa ei voitu muuntaa määritetyksi yksiköksi"
 
 #: InvenTree/exceptions.py:90
 msgid "Error details can be found in the admin panel"
-msgstr ""
+msgstr "Virheen tiedot löytyvät hallintapaneelista"
 
 #: InvenTree/fields.py:131
 msgid "Enter date"
-msgstr ""
+msgstr "Anna päivämäärä"
 
 #: InvenTree/fields.py:206 InvenTree/models.py:766 build/serializers.py:427
 #: build/serializers.py:506 build/templates/build/sidebar.html:23
@@ -71,7 +70,7 @@ msgstr ""
 #: templates/js/translated/sales_order.js:1959
 #: templates/js/translated/stock.js:1460 templates/js/translated/stock.js:2164
 msgid "Notes"
-msgstr ""
+msgstr "Merkinnät"
 
 #: InvenTree/format.py:152
 #, python-brace-format
@@ -84,43 +83,43 @@ msgstr ""
 
 #: InvenTree/forms.py:145
 msgid "Enter password"
-msgstr ""
+msgstr "Anna salasana"
 
 #: InvenTree/forms.py:146
 msgid "Enter new password"
-msgstr ""
+msgstr "Anna uusi salasana"
 
 #: InvenTree/forms.py:155
 msgid "Confirm password"
-msgstr ""
+msgstr "Vahvista salasana"
 
 #: InvenTree/forms.py:156
 msgid "Confirm new password"
-msgstr ""
+msgstr "Vahvista uusi salasana"
 
 #: InvenTree/forms.py:160
 msgid "Old password"
-msgstr ""
+msgstr "Vanha salasana"
 
 #: InvenTree/forms.py:179
 msgid "Email (again)"
-msgstr ""
+msgstr "Sähköposti (uudelleen)"
 
 #: InvenTree/forms.py:183
 msgid "Email address confirmation"
-msgstr ""
+msgstr "Sähköpostiosoitteen vahvistus"
 
 #: InvenTree/forms.py:204
 msgid "You must type the same email each time."
-msgstr ""
+msgstr "Sinun täytyy kirjoittaa sama sähköposti joka kerta."
 
 #: InvenTree/forms.py:230 InvenTree/forms.py:236
 msgid "The provided primary email address is not valid."
-msgstr ""
+msgstr "Annettu ensisijainen sähköpostiosoite ei kelpaa."
 
 #: InvenTree/forms.py:242
 msgid "The provided email domain is not approved."
-msgstr ""
+msgstr "Annetun sähköpostiosoitteen verkkotunnusta ei hyväksytä."
 
 #: InvenTree/helpers.py:462 order/models.py:439 order/models.py:608
 msgid "Invalid quantity provided"
@@ -164,11 +163,11 @@ msgstr ""
 
 #: InvenTree/helpers_model.py:133
 msgid "Connection error"
-msgstr ""
+msgstr "Yhteysvirhe"
 
 #: InvenTree/helpers_model.py:137 InvenTree/helpers_model.py:142
 msgid "Server responded with invalid status code"
-msgstr ""
+msgstr "Palvelin vastasi virheellisellä tilakoodilla"
 
 #: InvenTree/helpers_model.py:139
 msgid "Exception occurred"
@@ -180,7 +179,7 @@ msgstr ""
 
 #: InvenTree/helpers_model.py:150
 msgid "Image size is too large"
-msgstr ""
+msgstr "Kuva on liian iso"
 
 #: InvenTree/helpers_model.py:162
 msgid "Image download exceeded maximum size"
@@ -188,27 +187,27 @@ msgstr ""
 
 #: InvenTree/helpers_model.py:167
 msgid "Remote server returned empty response"
-msgstr ""
+msgstr "Etäpalvelin palautti tyhjän vastauksen"
 
 #: InvenTree/helpers_model.py:175
 msgid "Supplied URL is not a valid image file"
-msgstr ""
+msgstr "Annettu URL ei ole kelvollinen kuvatiedosto"
 
 #: InvenTree/models.py:82
 msgid "Metadata must be a python dict object"
-msgstr ""
+msgstr "Metatietojen tulee olla python dict objekti"
 
 #: InvenTree/models.py:86
 msgid "Plugin Metadata"
-msgstr ""
+msgstr "Liitännäisen metadata"
 
 #: InvenTree/models.py:87
 msgid "JSON metadata field, for use by external plugins"
-msgstr ""
+msgstr "JSON metadatakenttä, ulkoisten liitännäisten käyttöön"
 
 #: InvenTree/models.py:320
 msgid "Improperly formatted pattern"
-msgstr ""
+msgstr "Virheellisesti muotoiltu malli"
 
 #: InvenTree/models.py:327
 msgid "Unknown format key specified"
@@ -232,21 +231,21 @@ msgstr ""
 
 #: InvenTree/models.py:465
 msgid "Missing file"
-msgstr ""
+msgstr "Puuttuva tiedosto"
 
 #: InvenTree/models.py:466
 msgid "Missing external link"
-msgstr ""
+msgstr "Puuttuva ulkoinen linkki"
 
 #: InvenTree/models.py:486 stock/models.py:2261
 #: templates/js/translated/attachment.js:119
 #: templates/js/translated/attachment.js:306
 msgid "Attachment"
-msgstr ""
+msgstr "Liite"
 
 #: InvenTree/models.py:487
 msgid "Select file to attach"
-msgstr ""
+msgstr "Valitse liitettävä tiedosto"
 
 #: InvenTree/models.py:493 common/models.py:2661 company/models.py:132
 #: company/models.py:306 company/models.py:584 order/models.py:233
@@ -262,21 +261,21 @@ msgstr ""
 #: templates/js/translated/sales_order.js:1044
 #: templates/js/translated/sales_order.js:1964
 msgid "Link"
-msgstr ""
+msgstr "Linkki"
 
 #: InvenTree/models.py:494 build/models.py:291 part/models.py:901
 #: stock/models.py:735
 msgid "Link to external URL"
-msgstr ""
+msgstr "Linkki ulkoiseen URLiin"
 
 #: InvenTree/models.py:497 templates/js/translated/attachment.js:120
 #: templates/js/translated/attachment.js:321
 msgid "Comment"
-msgstr ""
+msgstr "Kommentti"
 
 #: InvenTree/models.py:497
 msgid "File comment"
-msgstr ""
+msgstr "Tiedoston kommentti"
 
 #: InvenTree/models.py:503 InvenTree/models.py:504 common/models.py:2120
 #: common/models.py:2121 common/models.py:2334 common/models.py:2335
@@ -286,7 +285,7 @@ msgstr ""
 #: report/templates/report/inventree_test_report_base.html:105
 #: templates/js/translated/stock.js:2773
 msgid "User"
-msgstr ""
+msgstr "Käyttäjä"
 
 #: InvenTree/models.py:507
 msgid "upload date"
@@ -294,11 +293,11 @@ msgstr ""
 
 #: InvenTree/models.py:529
 msgid "Filename must not be empty"
-msgstr ""
+msgstr "Tiedoston nimi ei saa olla tyhjä"
 
 #: InvenTree/models.py:538
 msgid "Invalid attachment directory"
-msgstr ""
+msgstr "Virheellinen liitteen hakemisto"
 
 #: InvenTree/models.py:548
 #, python-brace-format
@@ -470,16 +469,16 @@ msgstr ""
 
 #: InvenTree/serializers.py:598
 msgid "No data rows provided"
-msgstr ""
+msgstr "Datarivejä ei annettu"
 
 #: InvenTree/serializers.py:601
 msgid "No data columns supplied"
-msgstr ""
+msgstr "Datasarakkeita ei annettu"
 
 #: InvenTree/serializers.py:678
 #, python-brace-format
 msgid "Missing required column: '{name}'"
-msgstr ""
+msgstr "Vaadittu sarake puuttuu: '{name}'"
 
 #: InvenTree/serializers.py:687
 #, python-brace-format
@@ -489,47 +488,47 @@ msgstr ""
 #: InvenTree/serializers.py:713
 #: templates/InvenTree/settings/mixins/urls.html:14
 msgid "URL"
-msgstr ""
+msgstr "URL"
 
 #: InvenTree/serializers.py:714
 msgid "URL of remote image file"
-msgstr ""
+msgstr "Kuvatiedoston URL"
 
 #: InvenTree/serializers.py:728
 msgid "Downloading images from remote URL is not enabled"
-msgstr ""
+msgstr "Kuvien lataaminen ei ole käytössä"
 
 #: InvenTree/settings.py:713
 msgid "Czech"
-msgstr ""
+msgstr "tšekki"
 
 #: InvenTree/settings.py:714
 msgid "Danish"
-msgstr ""
+msgstr "tanska"
 
 #: InvenTree/settings.py:715
 msgid "German"
-msgstr ""
+msgstr "saksa"
 
 #: InvenTree/settings.py:716
 msgid "Greek"
-msgstr ""
+msgstr "kreikka"
 
 #: InvenTree/settings.py:717
 msgid "English"
-msgstr ""
+msgstr "englanti"
 
 #: InvenTree/settings.py:718
 msgid "Spanish"
-msgstr ""
+msgstr "espanja"
 
 #: InvenTree/settings.py:719
 msgid "Spanish (Mexican)"
-msgstr ""
+msgstr "espanja (Meksiko)"
 
 #: InvenTree/settings.py:720
 msgid "Farsi / Persian"
-msgstr ""
+msgstr "farsi / persia"
 
 #: InvenTree/settings.py:721
 msgid "Finnish"
@@ -537,75 +536,75 @@ msgstr ""
 
 #: InvenTree/settings.py:722
 msgid "French"
-msgstr ""
+msgstr "ranska"
 
 #: InvenTree/settings.py:723
 msgid "Hebrew"
-msgstr ""
+msgstr "heprea"
 
 #: InvenTree/settings.py:724
 msgid "Hungarian"
-msgstr ""
+msgstr "unkari"
 
 #: InvenTree/settings.py:725
 msgid "Italian"
-msgstr ""
+msgstr "italia"
 
 #: InvenTree/settings.py:726
 msgid "Japanese"
-msgstr ""
+msgstr "japani"
 
 #: InvenTree/settings.py:727
 msgid "Korean"
-msgstr ""
+msgstr "korea"
 
 #: InvenTree/settings.py:728
 msgid "Dutch"
-msgstr ""
+msgstr "hollanti"
 
 #: InvenTree/settings.py:729
 msgid "Norwegian"
-msgstr ""
+msgstr "norja"
 
 #: InvenTree/settings.py:730
 msgid "Polish"
-msgstr ""
+msgstr "puola"
 
 #: InvenTree/settings.py:731
 msgid "Portuguese"
-msgstr ""
+msgstr "portugali"
 
 #: InvenTree/settings.py:732
 msgid "Portuguese (Brazilian)"
-msgstr ""
+msgstr "portugali (Brasilia)"
 
 #: InvenTree/settings.py:733
 msgid "Russian"
-msgstr ""
+msgstr "venäjä"
 
 #: InvenTree/settings.py:734
 msgid "Slovenian"
-msgstr ""
+msgstr "slovenia"
 
 #: InvenTree/settings.py:735
 msgid "Swedish"
-msgstr ""
+msgstr "ruotsi"
 
 #: InvenTree/settings.py:736
 msgid "Thai"
-msgstr ""
+msgstr "thai"
 
 #: InvenTree/settings.py:737
 msgid "Turkish"
-msgstr ""
+msgstr "turkki"
 
 #: InvenTree/settings.py:738
 msgid "Vietnamese"
-msgstr ""
+msgstr "vietnam"
 
 #: InvenTree/settings.py:739
 msgid "Chinese"
-msgstr ""
+msgstr "kiina"
 
 #: InvenTree/status.py:61 part/serializers.py:878
 msgid "Background worker check failed"
@@ -617,13 +616,13 @@ msgstr ""
 
 #: InvenTree/status.py:68
 msgid "InvenTree system health checks failed"
-msgstr ""
+msgstr "InvenTree järjestelmän terveystarkastukset epäonnistui"
 
 #: InvenTree/status_codes.py:139 InvenTree/status_codes.py:181
 #: InvenTree/status_codes.py:360 InvenTree/status_codes.py:397
 #: InvenTree/status_codes.py:432 templates/js/translated/table_filters.js:500
 msgid "Pending"
-msgstr ""
+msgstr "Odottaa"
 
 #: InvenTree/status_codes.py:140
 msgid "Placed"
@@ -633,56 +632,56 @@ msgstr ""
 #: InvenTree/status_codes.py:399 order/templates/order/order_base.html:162
 #: order/templates/order/sales_order_base.html:162
 msgid "Complete"
-msgstr ""
+msgstr "Valmis"
 
 #: InvenTree/status_codes.py:142 InvenTree/status_codes.py:184
 #: InvenTree/status_codes.py:362 InvenTree/status_codes.py:400
 msgid "Cancelled"
-msgstr ""
+msgstr "Peruttu"
 
 #: InvenTree/status_codes.py:143 InvenTree/status_codes.py:185
 #: InvenTree/status_codes.py:227
 msgid "Lost"
-msgstr ""
+msgstr "Kadonnut"
 
 #: InvenTree/status_codes.py:144 InvenTree/status_codes.py:186
 msgid "Returned"
-msgstr ""
+msgstr "Palautettu"
 
 #: InvenTree/status_codes.py:182 InvenTree/status_codes.py:398
 msgid "In Progress"
-msgstr ""
+msgstr "Kesken"
 
 #: InvenTree/status_codes.py:183 order/models.py:1329
 #: templates/js/translated/sales_order.js:1509
 #: templates/js/translated/sales_order.js:1630
 #: templates/js/translated/sales_order.js:1934
 msgid "Shipped"
-msgstr ""
+msgstr "Lähetetty"
 
 #: InvenTree/status_codes.py:223
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: InvenTree/status_codes.py:224
 msgid "Attention needed"
-msgstr ""
+msgstr "Huomiota tarvitaan"
 
 #: InvenTree/status_codes.py:225
 msgid "Damaged"
-msgstr ""
+msgstr "Vahingoittunut"
 
 #: InvenTree/status_codes.py:226
 msgid "Destroyed"
-msgstr ""
+msgstr "Tuhottu"
 
 #: InvenTree/status_codes.py:228
 msgid "Rejected"
-msgstr ""
+msgstr "Hylätty"
 
 #: InvenTree/status_codes.py:229
 msgid "Quarantined"
-msgstr ""
+msgstr "Asetettu karanteeniin"
 
 #: InvenTree/status_codes.py:308
 msgid "Legacy stock tracking entry"
@@ -12487,8 +12486,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12667,3 +12665,4 @@ msgstr ""
 #: users/models.py:247
 msgid "Permission to delete items"
 msgstr ""
+
