--- a/InvenTree/locale/no/LC_MESSAGES/django.po
+++ b/InvenTree/locale/no/LC_MESSAGES/django.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-24 04:38+0000\n"
-"PO-Revision-Date: 2023-06-23 07:42\n"
+"POT-Creation-Date: 2023-06-23 22:42+0000\n"
+"PO-Revision-Date: 2023-06-24 07:43\n"
 "Last-Translator: \n"
 "Language-Team: Norwegian\n"
 "Language: no_NO\n"
@@ -199,7 +199,7 @@ msgstr "Angitt URL er ikke en gyldig bildefil"
 
 #: InvenTree/models.py:82
 msgid "Metadata must be a python dict object"
-msgstr "Metadata må være et python ordobjekt"
+msgstr "Metadata må være et python dict-objekt"
 
 #: InvenTree/models.py:86
 msgid "Plugin Metadata"
@@ -725,7 +725,7 @@ msgstr "Posisjon endret"
 
 #: InvenTree/status_codes.py:106
 msgid "Stock updated"
-msgstr "Lager oppdatert"
+msgstr "Lagerbeholdning oppdatert"
 
 #: InvenTree/status_codes.py:109
 msgid "Installed into assembly"
@@ -777,7 +777,7 @@ msgstr "Antatt som byggeordre"
 
 #: InvenTree/status_codes.py:132
 msgid "Shipped against Sales Order"
-msgstr "Sendt til salgsordre"
+msgstr "Sendt mot salgsordre"
 
 #: InvenTree/status_codes.py:135
 msgid "Received against Purchase Order"
@@ -2993,7 +2993,7 @@ msgstr "Vis ventende SO-forsendelser"
 
 #: common/models.py:1871
 msgid "Show pending SO shipments on the homepage"
-msgstr "Vis ventende SO forsendelser på startsiden"
+msgstr "Vis ventende SO-forsendelser på startsiden"
 
 #: common/models.py:1877
 msgid "Show News"
@@ -3450,7 +3450,7 @@ msgstr "Sammenlign varer"
 
 #: common/views.py:420
 msgid "Fields matching failed"
-msgstr "Feltene som matcher mislyktes"
+msgstr "Matching av felter mislyktes"
 
 #: common/views.py:481
 msgid "Parts imported"
@@ -4363,7 +4363,7 @@ msgstr "Filnavnmønster"
 
 #: label/models.py:154
 msgid "Pattern for generating label filenames"
-msgstr "Mønster for å generere etikettens filnavn"
+msgstr "Mønster for generering av etikett-filnavn"
 
 #: label/models.py:250 label/models.py:291 label/models.py:319
 #: label/models.py:355
@@ -4380,10 +4380,8 @@ msgstr "Filtre"
 #: label/templates/label/stockitem/qr.html:21
 #: label/templates/label/stocklocation/qr.html:21
 #: templates/allauth_2fa/setup.html:18
-#, fuzzy
-#| msgid "QC Code"
 msgid "QR Code"
-msgstr "QC kode"
+msgstr ""
 
 #: label/templates/label/part/part_label_code128.html:31
 #: label/templates/label/stocklocation/qr_and_text.html:31
@@ -12696,8 +12694,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12833,11 +12830,3 @@ msgstr ""
 msgid "Permission to delete items"
 msgstr ""
 
-#~ msgid "Query filters (comma-separated list of key=value pairs),"
-#~ msgstr "Søkefilter (kommaseparert liste over nøkkel=verdi-par),"
-
-#~ msgid "Query filters (comma-separated list of key=value pairs"
-#~ msgstr "Spørringsfiltre (kommaseparert liste over nøkkel=verdi-par"
-
-#~ msgid "Part query filters (comma-separated value of key=value pairs)"
-#~ msgstr "Spørringsfilter deler (kommaseparert liste over nøkkel=verdi-par)"
